<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.fagu.tkstrike</groupId>
	<artifactId>tkstrike-parent</artifactId>
	<version>1.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>


	<modules>
		<module>tkStrike-base-dto</module>
		<module>tkStrike-ei-dtos</module>
		<module>tkStrikeGen2-jfx</module>
		<module>tkStrike-ei-restInterfaces</module>
		<module>tkStrike-software-updates</module>
		<module>tkStrike-utils</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.javadoc.skip>true</maven.javadoc.skip>

		<jettison.version>1.2</jettison.version>
		<jackson.version>2.9.6</jackson.version>
		<jackson-asl.version>1.9.12</jackson-asl.version>
		<owasp-java-html-sanitizer.version>r136</owasp-java-html-sanitizer.version>
		<commons-fileupload.version>1.2.2</commons-fileupload.version>
		<commons-codec.version>1.6</commons-codec.version>
		<commons-io.version>2.4</commons-io.version>
		<commons-compress.version>1.9</commons-compress.version>
		<commons-collections.version>3.2.1</commons-collections.version>
		<commons-lang3.version>3.1</commons-lang3.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<commons-digester.version>2.1</commons-digester.version>
		<spring.version>4.3.17.RELEASE</spring.version>
		<slf4j.version>1.6.1</slf4j.version>
		<cxf.version>3.0.1</cxf.version>
		<controlsfx.version>8.40.18</controlsfx.version>
		<poi.version>3.17</poi.version>
		<jssc.version>2.8.0</jssc.version>
		<hibernate.version>4.3.11.Final</hibernate.version>
		<log4j.version>1.2.16</log4j.version>
		<aspectj.version>1.6.9</aspectj.version>
		<opencsv.version>2.3</opencsv.version>
		<flyway.version>3.2.1</flyway.version>
		<jfxtras.version>2.2-r5</jfxtras.version>
		<jasperreports.version>6.3.1</jasperreports.version>
		<groovy.version>1.8.6</groovy.version>
		<spring-data-jpa.version>1.11.12.RELEASE</spring-data-jpa.version>
		
		<zenjava.version>8.8.3</zenjava.version>
	</properties>

	<dependencyManagement>
		<dependencies>
	        <dependency>
	            <groupId>org.codehaus.jettison</groupId>
	            <artifactId>jettison</artifactId>
				<version>${jettison.version}</version>
	        </dependency>
	
	        <dependency>
	            <groupId>com.fasterxml.jackson.core</groupId>
	            <artifactId>jackson-core</artifactId>
	            <version>${jackson.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.fasterxml.jackson.core</groupId>
	            <artifactId>jackson-databind</artifactId>
	            <version>${jackson.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.codehaus.jackson</groupId>
	            <artifactId>jackson-mapper-asl</artifactId>
	            <version>${jackson-asl.version}</version>
	        </dependency>
	
	        <dependency>
	            <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
	            <artifactId>owasp-java-html-sanitizer</artifactId>
	            <version>${owasp-java-html-sanitizer.version}</version>
	        </dependency>
	
	        <dependency>
	            <groupId>org.apache.cxf</groupId>
	            <artifactId>cxf-core</artifactId>
	            <version>${cxf.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.cxf</groupId>
	            <artifactId>cxf-rt-rs-client</artifactId>
	            <version>${cxf.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.cxf</groupId>
	            <artifactId>cxf-rt-transports-http-hc</artifactId>
	            <version>${cxf.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.cxf</groupId>
	            <artifactId>cxf-rt-rs-extension-providers</artifactId>
	            <version>${cxf.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.scream3r</groupId>
	            <artifactId>jssc</artifactId>
	            <version>${jssc.version}</version>
	        </dependency>

	        <dependency>
	            <groupId>org.controlsfx</groupId>
	            <artifactId>controlsfx</artifactId>
	            <version>${controlsfx.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.poi</groupId>
	            <artifactId>poi</artifactId>
	            <version>${poi.version}</version>
	        </dependency>
       	 	<dependency>
	            <groupId>commons-fileupload</groupId>
	            <artifactId>commons-fileupload</artifactId>
	            <version>${commons-fileupload.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>commons-codec</groupId>
	            <artifactId>commons-codec</artifactId>
	            <version>${commons-codec.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>commons-io</groupId>
	            <artifactId>commons-io</artifactId>
	            <version>${commons-io.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.commons</groupId>
	            <artifactId>commons-compress</artifactId>
	            <version>${commons-compress.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>commons-collections</groupId>
	            <artifactId>commons-collections</artifactId>
	            <version>${commons-collections.version}</version>
	        </dependency>
	        <dependency>
	           <groupId>commons-digester</groupId>
	           <artifactId>commons-digester</artifactId>
	           <version>${commons-digester.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.commons</groupId>
	            <artifactId>commons-lang3</artifactId>
	            <version>${commons-lang3.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>commons-beanutils</groupId>
	            <artifactId>commons-beanutils</artifactId>
	            <version>${commons-beanutils.version}</version>
	        </dependency>
	
	        <dependency>
	            <groupId>org.springframework</groupId>
	            <artifactId>spring-beans</artifactId>
	            <version>${spring.version}</version>
	        </dependency>
	       <dependency>
	            <groupId>org.springframework</groupId>
	            <artifactId>spring-core</artifactId>
	            <version>${spring.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.springframework</groupId>
	            <artifactId>spring-context-support</artifactId>
	            <version>${spring.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.springframework</groupId>
	            <artifactId>spring-context</artifactId>
	            <version>${spring.version}</version>
	        </dependency>	
	         <dependency>
	            <groupId>org.springframework</groupId>
	            <artifactId>spring-tx</artifactId>
	            <version>${spring.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.springframework</groupId>
	            <artifactId>spring-aspects</artifactId>
	            <version>${spring.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.springframework.data</groupId>
	            <artifactId>spring-data-jpa</artifactId>
	            <version>${spring-data-jpa.version}</version>
	        </dependency>

			<dependency>
	            <groupId>org.aspectj</groupId>
	            <artifactId>aspectjrt</artifactId>
	            <version>${aspectj.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.aspectj</groupId>
	            <artifactId>aspectjweaver</artifactId>
	            <version>${aspectj.version}</version>
	        </dependency>
        	        
       		<dependency>
	            <groupId>org.hibernate</groupId>
	            <artifactId>hibernate-core</artifactId>
	            <version>${hibernate.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.hibernate</groupId>
	            <artifactId>hibernate-entitymanager</artifactId>
	            <version>${hibernate.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.hibernate</groupId>
    			<artifactId>hibernate-validator</artifactId>
	            <version>${hibernate.version}</version>
	        </dependency>
	        
	        <dependency>
	            <groupId>net.sf.opencsv</groupId>
	            <artifactId>opencsv</artifactId>
	            <version>${opencsv.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.flywaydb</groupId>
	            <artifactId>flyway-core</artifactId>
	            <version>${flyway.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.jfxtras</groupId>
	            <artifactId>jfxtras-labs</artifactId>
	            <version>${jfxtras.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>net.sf.jasperreports</groupId>
	            <artifactId>jasperreports</artifactId>
	            <version>${jasperreports.version}</version>
	        </dependency>
	        <dependency>
	           <groupId>org.codehaus.groovy</groupId>
	           <artifactId>groovy-all</artifactId>
	           <version>${groovy.version}</version>
	        </dependency>

	        
	        <dependency>
	            <groupId>org.slf4j</groupId>
	            <artifactId>slf4j-api</artifactId>
	            <version>${slf4j.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.slf4j</groupId>
	            <artifactId>jcl-over-slf4j</artifactId>
	            <version>${slf4j.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>org.slf4j</groupId>
	            <artifactId>slf4j-log4j12</artifactId>
	           <version>${slf4j.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>log4j</groupId>
	            <artifactId>log4j</artifactId>
	            <version>${log4j.version}</version>
	        </dependency>
	        
		</dependencies>
	</dependencyManagement>

</project>